--- a/config/locales/views/other_assets/it.yml
+++ b/config/locales/views/other_assets/it.yml
@@ -1,9 +1,10 @@
 ---
 it:
   other_assets:
+    balance_tracking_info: &balance_info Gli altri beni vengono monitorati tramite valutazioni manuali utilizzando il “Nuovo saldo”, non le transazioni. Il flusso di cassa non influirà sul saldo del conto.
     edit:
       edit: Modifica %{account}
-      balance_tracking_info: "Gli altri beni vengono monitorati tramite valutazioni manuali utilizzando il “Nuovo saldo”, non le transazioni. Il flusso di cassa non influirà sul saldo del conto."
+      balance_tracking_info: *balance_info
     new:
       title: Inserisci i dettagli del bene
-      balance_tracking_info: "Gli altri beni vengono monitorati tramite valutazioni manuali utilizzando il “Nuovo saldo”, non le transazioni. Il flusso di cassa non influirà sul saldo del conto."
+      balance_tracking_info: *balance_info
