--- a/config/locales/views/tags/it.yml
+++ b/config/locales/views/tags/it.yml
@@ -3,19 +3,19 @@ it:
   tags:
     create:
       created: Tag creato
-      error: 'Errore nella creazione del tag: %{error}'
+      error: 'Errore nella creazione del Tag: %{error}'
     destroy:
       deleted: Tag eliminato
     edit:
-      edit: Modifica tag
+      edit: Modifica Tag
     form:
       placeholder: Nome Tag
     index:
-      empty: Ancora nessun tag
-      new: Nuovo tag
+      empty: Ancora nessun Tag
+      new: Nuovo Tag
       tags: I tuoi Tag
     new:
-      new: Nuovo tag
+      new: Nuovo Tag
     tag:
       delete: Elimina
       edit: Modifica
