--- a/config/locales/views/imports/en.yml
+++ b/config/locales/views/imports/en.yml
@@ -36,17 +36,17 @@ en:
         unassigned_account: Need to create a new account for unassigned rows?
       show:
         account_mapping_description: Assign all of your imported file's accounts to
-          Sure's existing accounts.  You can also add new accounts or leave them
+          %{product_name} existing accounts.  You can also add new accounts or leave them
           uncategorized.
         account_mapping_title: Assign your accounts
         account_type_mapping_description: Assign all of your imported file's account
-          types to Sure's
+          types to %{product_name}
         account_type_mapping_title: Assign your account types
         category_mapping_description: Assign all of your imported file's categories
-          to Sure's existing categories.  You can also add new categories or leave
+          to %{product_name} existing categories.  You can also add new categories or leave
           them uncategorized.
         category_mapping_title: Assign your categories
-        tag_mapping_description: Assign all of your imported file's tags to Sure's
+        tag_mapping_description: Assign all of your imported file's tags to %{product_name}
           existing tags.  You can also add new tags or leave them uncategorized.
         tag_mapping_title: Assign your tags
     uploads:
