Small copy changes to avoid mobile UI blowout

--- a/config/locales/views/simplefin_items/en.yml
+++ b/config/locales/views/simplefin_items/en.yml
@@ -44,7 +44,7 @@ en:
       error: Error occurred while syncing data
       no_accounts_description: This connection doesn't have any synchronized accounts yet.
       no_accounts_title: No accounts found
-      requires_update: Requires re-authentication
+      requires_update: Reconnect
       setup_needed: New accounts ready to set up
       setup_description: Choose account types for your newly imported SimpleFin accounts.
       setup_action: Set Up New Accounts
@@ -52,7 +52,7 @@ en:
       status_never: Never synced
       status_with_summary: "Last synced %{timestamp} ago • %{summary}"
       syncing: Syncing...
-      update: Update connection
+      update: Update
     select_existing_account:
       title: "Link %{account_name} to SimpleFIN"
       description: Select a SimpleFIN account to link to your existing account
