--- a/config/locales/views/rules/nb.yml
+++ b/config/locales/views/rules/nb.yml
@@ -1,6 +1,7 @@
 ---
 nb:
   rules:
+    no_action: Ingen handling
     recent_runs:
       title: Siste Kjøringer
       description: Se kjøringsloggen for reglene dine inkludert suksess/feil-status og transaksjonsantall.
