--- a/config/locales/views/rules/ro.yml
+++ b/config/locales/views/rules/ro.yml
@@ -1,6 +1,7 @@
 ---
 ro:
   rules:
+    no_action: Nicio acțiune
     recent_runs:
       title: Rulări Recente
       description: Vezi istoricul de execuție al regulilor tale incluzând statusul de succes/eșec și numărul de tranzacții.
