--- a/config/locales/views/rules/es.yml
+++ b/config/locales/views/rules/es.yml
@@ -1,6 +1,7 @@
 ---
 es:
   rules:
+    no_action: Sin acción
     recent_runs:
       title: Ejecuciones Recientes
       description: Ver el historial de ejecución de tus reglas incluyendo el estado de éxito/fallo y los conteos de transacciones.
