--- a/config/locales/views/simplefin_items/en.yml
+++ b/config/locales/views/simplefin_items/en.yml
@@ -58,3 +58,7 @@ en:
       description: Select a SimpleFIN account to link to your existing account
       cancel: Cancel
       link_account: Link account
+      no_accounts_found: No SimpleFIN accounts found for this family.
+      wait_for_sync: If you just connected or synced, try again after the sync completes.
+      check_provider_health: Ensure your SimpleFIN connection is healthy in Settings → Providers.
+      currently_linked_to: "Currently linked to: %{account_name}"
