--- a/config/locales/views/simplefin_items/zh-CN.yml
+++ b/config/locales/views/simplefin_items/zh-CN.yml
@@ -2,33 +2,33 @@
 zh-CN:
   simplefin_items:
     new:
-      title: 连接 SimpleFin
+      title: 连接 SimpleFIN
       setup_token: 设置令牌
-      setup_token_placeholder: 粘贴您的 SimpleFin 设置令牌
+      setup_token_placeholder: 粘贴您的 SimpleFIN 设置令牌
       connect: 连接
       cancel: 取消
     create:
       success: SimpleFin 连接已成功添加！您的账户将在后台同步后显示。
       errors:
-        blank_token: 请输入 SimpleFin 设置令牌。
-        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
+        blank_token: 请输入 SimpleFIN 设置令牌。
+        invalid_token: 设置令牌无效。请检查是否从 SimpleFIN Bridge 复制了完整的令牌。
         token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
         create_failed: "连接失败：%{message}"
         unexpected: 发生意外错误。请重试或联系支持团队。
     destroy:
-      success: SimpleFin 连接将被移除
+      success: SimpleFIN 连接将被移除
     update:
-      success: SimpleFin 连接更新成功！您的账户正在重新连接中。
+      success: SimpleFIN 连接更新成功！您的账户正在重新连接中。
       errors:
-        blank_token: 请输入 SimpleFin 设置令牌。
-        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
+        blank_token: 请输入 SimpleFIN 设置令牌。
+        invalid_token: 设置令牌无效。请检查是否从 SimpleFIN Bridge 复制了完整的令牌。
         token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
         update_failed: "更新连接失败：%{message}"
         unexpected: 发生意外错误。请重试或联系支持团队。
     edit:
       setup_token:
         label: "SimpleFin 设置令牌："
-        placeholder: 在此粘贴您的 SimpleFin 设置令牌...
+        placeholder: 在此粘贴您的 SimpleFIN 设置令牌...
         help_text: 令牌应为以字母和数字开头的长字符串
     complete_account_setup:
       all_skipped: 所有账户已跳过。未创建任何账户。
@@ -38,7 +38,7 @@ zh-CN:
       add_new: 添加新连接
       confirm_accept: 删除连接
       confirm_body: 此操作将永久删除该组下的所有账户及相关数据。
-      confirm_title: 确认删除 SimpleFin 连接？
+      confirm_title: 确认删除 SimpleFIN 连接？
       delete: 删除
       deletion_in_progress: "（删除进行中...）"
       error: 同步数据时发生错误
@@ -46,7 +46,7 @@ zh-CN:
       no_accounts_title: 未找到账户
       requires_update: 需要重新认证
       setup_needed: 新账户待设置
-      setup_description: 请为您新导入的 SimpleFin 账户选择账户类型。
+      setup_description: 请为您新导入的 SimpleFIN 账户选择账户类型。
       setup_action: 设置新账户
       status: "上次同步于 %{timestamp} 前"
       status_never: 从未同步
