--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -82,6 +82,9 @@ zh-CN:
       month: 月
       second: 秒
       year: 年
+  defaults:
+    brand_name: "%{brand_name}"
+    product_name: "%{product_name}"
   errors:
     format: "%{attribute}%{message}"
     messages:
@@ -90,10 +93,11 @@ zh-CN:
       confirmation: 与%{attribute}不匹配
       empty: 不能留空
       equal_to: 必须等于%{count}
-      even: 必须为双数
+      even: 必须为偶数
       exclusion: 是保留关键字
       greater_than: 必须大于%{count}
       greater_than_or_equal_to: 必须大于或等于%{count}
+      in: 必须在 %{count} 之内
       inclusion: 不包含于列表中
       invalid: 是无效的
       less_than: 必须小于%{count}
@@ -101,7 +105,7 @@ zh-CN:
       model_invalid: 验证失败：%{errors}
       not_a_number: 不是数字
       not_an_integer: 必须是整数
-      odd: 必须为单数
+      odd: 必须为奇数
       other_than: 长度非法（不可为%{count}个字符）
       present: 必须是空白
       required: 必须存在
@@ -111,7 +115,7 @@ zh-CN:
       wrong_length: 长度非法（必须为%{count}个字符）
     template:
       body: 如下字段出现错误：
-      header: 有%{count}个错误发生导致“%{model}”无法被保存。
+      header: 有%{count}个错误发生导致"%{model}"无法被保存。
   helpers:
     select:
       prompt: 请选择
@@ -123,15 +127,16 @@ zh-CN:
     currency:
       format:
         delimiter: ","
-        format: "%u %n"
-        precision: 2
         separator: "."
+        unit: "¥"
+        format: "%u%n"
+        precision: 2
         significant: false
         strip_insignificant_zeros: false
-        unit: CN¥
     format:
       delimiter: ","
       precision: 3
+      round_mode: default
       separator: "."
       significant: false
       strip_insignificant_zeros: false
@@ -170,12 +175,12 @@ zh-CN:
   support:
     array:
       last_word_connector: "、"
-      two_words_connector: 和
+      two_words_connector: "和"
       words_connector: "、"
   time:
     am: 上午
     formats:
-      default: "%Y年%m月%d日 %A %H:%M:%S %Z"
+      default: "%Y年%m月%d日 %A %H:%M:%S"
       long: "%Y年%m月%d日 %H:%M"
       short: "%m月%d日 %H:%M"
     pm: 下午
