--- a/config/locales/views/email_confirmation_mailer/zh-CN.yml
+++ b/config/locales/views/email_confirmation_mailer/zh-CN.yml
@@ -6,4 +6,4 @@ zh-CN:
       cta: 确认邮箱更改
       expiry_notice: 此链接将在 %{hours} 小时后失效。
       greeting: 您好！
-      subject: '%{product_name}：确认您的邮箱更改'
+      subject: "%{product_name}：确认您的邮箱更改"
