--- a/config/locales/views/imports/zh-CN.yml
+++ b/config/locales/views/imports/zh-CN.yml
@@ -28,10 +28,10 @@ zh-CN:
     confirms:
       mappings:
         create_account: 新建账户
-        csv_mapping_label: "CSV 中的 %{mapping}"
-        sure_mapping_label: "%{product_name} 中的 %{mapping}"
+        csv_mapping_label: CSV 中的 %{mapping}
         no_accounts: 您目前没有任何账户。请创建一个账户用于处理 CSV 中的（未分配）行，或返回上一步的“清洗”环节提供一个可用的账户名称。
         rows_label: 行数
+        sure_mapping_label: "%{product_name} 中的 %{mapping}"
         unassigned_account: 需要为未分配行创建新账户？
       show:
         account_mapping_description: 将导入文件中的所有账户分配到 %{product_name} 的现有账户。您也可以新建账户或保留为未分类。
@@ -66,12 +66,12 @@ zh-CN:
       uploading: 处理行数据中
       view: 查看
     index:
+      exports: 导出记录
       imports: 导入记录
       new: 新建导入
-      title: 导入/导出管理
-      exports: 导出记录
       new_export: 新建导出
       no_exports: 暂无导出记录
+      title: 导入/导出管理
     new:
       description: 您可以通过 CSV 手动导入多种类型数据，或使用我们的导入模板（如 Mint 格式）。
       import_accounts: 导入账户
