--- a/config/locales/views/loans/zh-CN.yml
+++ b/config/locales/views/loans/zh-CN.yml
@@ -4,9 +4,9 @@ zh-CN:
     edit:
       edit: 编辑%{account}
     form:
+      initial_balance: 原始贷款余额
       interest_rate: 利率
       interest_rate_placeholder: '5.25'
-      initial_balance: 原始贷款余额
       rate_type: 利率类型
       term_months: 期限（月）
       term_months_placeholder: '360'
@@ -21,3 +21,13 @@ zh-CN:
       term: 期限
       type: 类型
       unknown: 未知
+    tabs:
+      overview:
+        interest_rate: "利率"
+        monthly_payment: "月供"
+        not_applicable: "不适用"
+        original_principal: "原始本金"
+        remaining_principal: "剩余本金"
+        term: "期限"
+        type: "类型"
+        unknown: "未知"
