--- a/config/locales/views/properties/zh-CN.yml
+++ b/config/locales/views/properties/zh-CN.yml
@@ -30,3 +30,11 @@ zh-CN:
       trend: 价格趋势
       unknown: 未知
       year_built: 建造年份
+    tabs:
+      overview:
+        living_area: "居住面积"
+        market_value: "市场价"
+        purchase_price: "买入价"
+        trend: "走势"
+        unknown: "未知"
+        year_built: "建筑年份"
