--- a/config/locales/views/shared/zh-CN.yml
+++ b/config/locales/views/shared/zh-CN.yml
@@ -11,4 +11,8 @@ zh-CN:
     syncing_notice:
       syncing: 账户数据同步中...
     trend_change:
-      no_change: "无变化"
+      no_change: 无变化
+    transaction_tabs:
+      expense: "支出"
+      income: "收入"
+      transfer: "转账"
