--- a/config/locales/views/simplefin_items/zh-CN.yml
+++ b/config/locales/views/simplefin_items/zh-CN.yml
@@ -1,39 +1,36 @@
 ---
 zh-CN:
   simplefin_items:
-    new:
-      title: 连接 SimpleFin
-      setup_token: 设置令牌
-      setup_token_placeholder: 粘贴您的 SimpleFin 设置令牌
-      connect: 连接
-      cancel: 取消
-    create:
-      success: SimpleFin 连接已成功添加！您的账户将在后台同步后显示。
-      errors:
-        blank_token: 请输入 SimpleFin 设置令牌。
-        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
-        token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
-        create_failed: "连接失败：%{message}"
-        unexpected: 发生意外错误。请重试或联系支持团队。
-    destroy:
-      success: SimpleFin 连接将被移除
-    update:
-      success: SimpleFin 连接更新成功！您的账户正在重新连接中。
-      errors:
-        blank_token: 请输入 SimpleFin 设置令牌。
-        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
-        token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
-        update_failed: "更新连接失败：%{message}"
-        unexpected: 发生意外错误。请重试或联系支持团队。
-    edit:
-      setup_token:
-        label: "SimpleFin 设置令牌："
-        placeholder: 在此粘贴您的 SimpleFin 设置令牌...
-        help_text: 令牌应为以字母和数字开头的长字符串
     complete_account_setup:
       all_skipped: 所有账户已跳过。未创建任何账户。
       no_accounts: 无待设置账户。
       success: 已成功创建 %{count} 个 SimpleFIN 账户！您的交易和投资数据正在后台导入。
+    create:
+      errors:
+        blank_token: 请输入 SimpleFin 设置令牌。
+        create_failed: 连接失败：%{message}
+        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
+        token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
+        unexpected: 发生意外错误。请重试或联系支持团队。
+      success: SimpleFin 连接已成功添加！您的账户将在后台同步后显示。
+    destroy:
+      success: SimpleFin 连接将被移除
+    edit:
+      setup_token:
+        help_text: 令牌应为以字母和数字开头的长字符串
+        label: SimpleFin 设置令牌：
+        placeholder: 在此粘贴您的 SimpleFin 设置令牌...
+    new:
+      cancel: 取消
+      connect: 连接
+      setup_token: 设置令牌
+      setup_token_placeholder: 粘贴您的 SimpleFin 设置令牌
+      title: 连接 SimpleFin
+    select_existing_account:
+      cancel: 取消
+      description: 选择一个 SimpleFIN 账户与您的现有账户关联
+      link_account: 关联账户
+      title: 将 %{account_name} 关联到 SimpleFIN
     simplefin_item:
       add_new: 添加新连接
       confirm_accept: 删除连接
@@ -45,16 +42,19 @@ zh-CN:
       no_accounts_description: 此连接尚未同步任何账户。
       no_accounts_title: 未找到账户
       requires_update: 需要重新认证
-      setup_needed: 新账户待设置
-      setup_description: 请为您新导入的 SimpleFin 账户选择账户类型。
       setup_action: 设置新账户
-      status: "上次同步于 %{timestamp} 前"
+      setup_description: 请为您新导入的 SimpleFin 账户选择账户类型。
+      setup_needed: 新账户待设置
+      status: 上次同步于 %{timestamp} 前
       status_never: 从未同步
-      status_with_summary: "同步于 %{timestamp} 前 • %{summary}"
+      status_with_summary: 同步于 %{timestamp} 前 • %{summary}
       syncing: 同步中...
       update: 更新连接
-    select_existing_account:
-      title: "将 %{account_name} 关联到 SimpleFIN"
-      description: 选择一个 SimpleFIN 账户与您的现有账户关联
-      cancel: 取消
-      link_account: 关联账户
+    update:
+      errors:
+        blank_token: 请输入 SimpleFin 设置令牌。
+        invalid_token: 设置令牌无效。请检查是否从 SimpleFin Bridge 复制了完整的令牌。
+        token_compromised: 设置令牌可能已泄露、过期或已被使用。请创建新令牌。
+        unexpected: 发生意外错误。请重试或联系支持团队。
+        update_failed: 更新连接失败：%{message}
+      success: SimpleFin 连接更新成功！您的账户正在重新连接中。
