--- a/config/locales/views/tags/zh-CN.yml
+++ b/config/locales/views/tags/zh-CN.yml
@@ -3,7 +3,7 @@ zh-CN:
   tags:
     create:
       created: 标签已创建
-      error: '创建标签失败：%{error}'
+      error: 创建标签失败：%{error}
     destroy:
       deleted: 标签已删除
     edit:
