--- a/config/locales/views/transactions/zh-CN.yml
+++ b/config/locales/views/transactions/zh-CN.yml
@@ -12,36 +12,13 @@ zh-CN:
       description_placeholder: 请输入交易描述
       expense: 支出
       income: 收入
-      none: （无）
+      none: "（无）"
       note_label: 备注
       note_placeholder: 请输入备注
       submit: 添加交易
       tags_label: 标签
       transfer: 转账
-    new:
-      new_transaction: 新建交易
-    show:
-      account_label: 账户
-      amount: 金额
-      category_label: 分类
-      date_label: 日期
-      delete: 删除
-      delete_subtitle: 此操作将永久删除该交易，影响历史余额数据，且不可恢复。
-      delete_title: 删除交易
-      details: 详情
-      mark_recurring: 标记为定期交易
-      mark_recurring_subtitle: 将此交易标记为定期交易跟踪。金额波动将根据过去6个月的类似交易自动计算。
-      mark_recurring_title: 定期交易设置
-      merchant_label: 商户
-      name_label: 名称
-      nature: 类型
-      none: "（无）"
-      note_label: 备注
-      note_placeholder: 请输入备注
-      overview: 概览
-      settings: 设置
-      tags_label: 标签
-      uncategorized: "（未分类）"
+      details: "详情"
     header:
       edit_categories: 编辑分类
       edit_imports: 编辑导入
@@ -51,6 +28,9 @@ zh-CN:
     index:
       transaction: 交易
       transactions: 交易记录
+      import: "导入"
+    new:
+      new_transaction: 新建交易
     searches:
       filters:
         amount_filter:
@@ -83,3 +63,25 @@ zh-CN:
         equal_to: 等于
         greater_than: 大于
         less_than: 小于
+    show:
+      account_label: 账户
+      amount: 金额
+      category_label: 分类
+      date_label: 日期
+      delete: 删除
+      delete_subtitle: 此操作将永久删除该交易，影响历史余额数据，且不可恢复。
+      delete_title: 删除交易
+      details: 详情
+      mark_recurring: 标记为定期交易
+      mark_recurring_subtitle: 将此交易标记为定期交易跟踪。金额波动将根据过去6个月的类似交易自动计算。
+      mark_recurring_title: 定期交易设置
+      merchant_label: 商户
+      name_label: 名称
+      nature: 类型
+      none: "（无）"
+      note_label: 备注
+      note_placeholder: 请输入备注
+      overview: 概览
+      settings: 设置
+      tags_label: 标签
+      uncategorized: "（未分类）"
