--- a/config/locales/views/valuations/zh-CN.yml
+++ b/config/locales/views/valuations/zh-CN.yml
@@ -15,6 +15,8 @@ zh-CN:
       value: 价值
     new:
       title: 新建余额记录
+      amount: "金额"
+      submit: "提交"
     show:
       amount: 金额
       date_label: 日期
