--- a/config/locales/views/vehicles/zh-CN.yml
+++ b/config/locales/views/vehicles/zh-CN.yml
@@ -23,3 +23,12 @@ zh-CN:
       trend: 价格趋势
       unknown: 未知
       year: 年份
+    tabs:
+      overview:
+        current_price: "当前价格"
+        make_model: "品牌型号"
+        mileage: "里程"
+        purchase_price: "买入价"
+        trend: "走势"
+        unknown: "未知"
+        year: "年份"
