Add German locale test pass
Add a DEFAULT_LOCALE override for tests and update UI assertions to follow translated text and formatting.

Refs: #000

--- a/config/locales/views/shared/de.yml
+++ b/config/locales/views/shared/de.yml
@@ -8,6 +8,10 @@ de:
       title: Bist du sicher
     money_field:
       label: Betrag
+    transaction_tabs:
+      expense: Ausgabe
+      income: Einnahme
+      transfer: Überweisung
     syncing_notice:
       syncing: Kontodaten werden synchronisiert...
     trend_change:
