--- a/config/locales/views/loans/zh-CN.yml
+++ b/config/locales/views/loans/zh-CN.yml
@@ -23,11 +23,11 @@ zh-CN:
       unknown: 未知
     tabs:
       overview:
-        interest_rate: "利率"
-        monthly_payment: "月供"
-        not_applicable: "不适用"
-        original_principal: "原始本金"
-        remaining_principal: "剩余本金"
-        term: "期限"
-        type: "类型"
-        unknown: "未知"
+        interest_rate: 利率
+        monthly_payment: 月供
+        not_applicable: 不适用
+        original_principal: 原始本金
+        remaining_principal: 剩余本金
+        term: 期限
+        type: 类型
+        unknown: 未知
