--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -126,11 +126,6 @@ zh-CN:
   number:
     currency:
       format:
-        delimiter: ","
-        separator: "."
-        unit: "¥"
-        format: "%u%n"
-        precision: 2
         significant: false
         strip_insignificant_zeros: false
     format:
@@ -175,7 +170,7 @@ zh-CN:
   support:
     array:
       last_word_connector: "、"
-      two_words_connector: "和"
+      two_words_connector: 和
       words_connector: "、"
   time:
     am: 上午
