--- a/config/locales/views/budgets/zh-CN.yml
+++ b/config/locales/views/budgets/zh-CN.yml
@@ -1,6 +1,7 @@
+---
 zh-CN:
   budgets:
     show:
       tabs:
-        actual: "实际"
-        budgeted: "预算"
+        actual: 实际
+        budgeted: 预算
