Fix translations mistakes

--- a/config/locales/models/address/fr.yml
+++ b/config/locales/models/address/fr.yml
@@ -5,7 +5,7 @@ fr:
       country: Pays
       line1: Adresse ligne 1
       line2: Adresse ligne 2
-      locality: Localité
+      locality: Ville
       postal_code: Code Postal
       region: Région
     format: "%{line1} %{line2}, %{locality}, %{region} %{postal_code} %{country}"
