--- a/config/locales/views/settings/api_keys/fr.yml
+++ b/config/locales/views/settings/api_keys/fr.yml
@@ -17,15 +17,15 @@ fr:
         title: "Clé API"
         description: "Accédez de manière programmée à vos données %{product_name} avec une clé API sécurisée."
         what_you_can_do: "Ce que vous pouvez faire avec l'API :"
-        feature_1: "Accéder à vos données de compte de manière programmée"
+        feature_1: "Accéder à vos données de compte de manière automatisée"
         feature_2: "Construire des intégrations et applications personnalisées"
         feature_3: "Automatiser la récupération et l'analyse des données"
-        security_note_title: "Première sécurité"
+        security_note_title: "Sécurité avant tout"
         security_note: "Votre clé API aura des autorisations limitées en fonction des domaines que vous sélectionnez. Vous ne pouvez avoir qu'une seule clé API active à la fois."
         create_api_key: "Créer une clé API"
       current_api_key:
         title: "Votre Clé API"
-        description: "Votre clé API active est prête à être utilisée. Gardez-la sécurisée et ne la partagez jamais publiquement."
+        description: "Votre clé API active est prête à être utilisée. Gardez-la en sécurité et ne la partagez jamais publiquement."
         active: "Active"
         key_name: "Nom"
         created_at: "Créée le"
@@ -55,7 +55,7 @@ fr:
           read_balances: "Afficher les données historiques des soldes et les tendances des valeurs des comptes"
           write_transactions: "Créer et mettre à jour des enregistrements de transaction (prochainement disponible)"
         security_warning_title: "Avertissement important de sécurité"
-        security_warning: "Votre clé API sera affichée uniquement une fois après sa création. Gardez-la sécurisée et ne la partagez jamais publiquement. Si vous l'avez perdue, vous devrez en créer une nouvelle."
+        security_warning: "Votre clé API sera affichée uniquement une fois après sa création. Gardez-la en sécurité et ne la partagez jamais publiquement. Si vous l'avez perdue, vous devrez en créer une nouvelle."
         create_key: "Créer une clé API"
         cancel: "Annuler"
       created:
@@ -65,8 +65,8 @@ fr:
         your_api_key: "Votre clé API"
         key_name: "Nom"
         permissions: "Autorisations"
-        critical_warning_title: "⚠️ Critique : Sauvegardez votre clé API dès à présent"
-        critical_warning_1: "C'est le seul moment où vous verrez votre clé API en texte brut."
+        critical_warning_title: "⚠️ Critique : Sauvegardez votre clé API maintenant"
+        critical_warning_1: "C'est le seul moment où vous verrez votre clé API en clair."
         critical_warning_2: "Copiez-la et stockez-la de manière sécurisée dans votre gestionnaire de mots de passe ou dans l'application."
         critical_warning_3: "Si vous l'avez perdue, vous devrez en créer une nouvelle."
         usage_instructions_title: "Démarrage rapide"
