--- a/config/locales/views/settings/hostings/fr.yml
+++ b/config/locales/views/settings/hostings/fr.yml
@@ -4,7 +4,7 @@ fr:
     hostings:
       invite_code_settings:
         description: Chaque nouvel utilisateur qui rejoint votre instance de %{product_name} ne peut le faire qu'avec un code d'invitation
-        email_confirmation_description: Lorsqu'il est activé, les utilisateurs doivent confirmer leur adresse e-mail lors du changement.
+        email_confirmation_description: Lorsque cette option est activée, les utilisateurs doivent confirmer leur adresse e-mail lors du changement.
         email_confirmation_title: Exiger la confirmation de l'e-mail
         generate_tokens: Générer un nouveau code
         generated_tokens: Codes générés
