--- a/config/locales/models/user/fr.yml
+++ b/config/locales/models/user/fr.yml
@@ -17,6 +17,6 @@ fr:
             base:
               cannot_deactivate_admin_with_other_users: Un administrateur ne peut pas
                 désactiver son compte tant que d'autres utilisateurs sont présents.
-                Veuillez supprimer tous les membres en premier lieu.
+                Veuillez d’abord supprimer tous les membres.
             profile_image:
               invalid_file_size: La taille du fichier doit être inférieure à %{max_megabytes} Mo
