--- a/config/locales/views/email_confirmation_mailer/fr.yml
+++ b/config/locales/views/email_confirmation_mailer/fr.yml
@@ -5,5 +5,5 @@ fr:
       body: Vous avez récemment demandé à modifier votre adresse e-mail. Cliquez sur le bouton ci-dessous pour confirmer cette modification.
       cta: Confirmer la modification de l'e-mail
       expiry_notice: Ce lien expirera dans %{hours} heures.
-      greeting: Salut!
+      greeting: Bonjour !
       subject: '%{product_name} : Confirmez le changement de votre adresse mail'
