--- a/config/locales/views/entries/fr.yml
+++ b/config/locales/views/entries/fr.yml
@@ -6,7 +6,7 @@ fr:
     destroy:
       success: Entrée supprimée
     empty:
-      description: Essayez d'ajouter une entrée, de modifier les filtres ou de raffiner votre recherche
+      description: Essayez d'ajouter une entrée, de modifier les filtres ou d'affiner votre recherche
       title: Aucune entrée trouvée
     loading:
       loading: Chargement des entrées...
