--- a/config/locales/views/password_resets/fr.yml
+++ b/config/locales/views/password_resets/fr.yml
@@ -2,11 +2,11 @@
 fr:
   password_resets:
     edit:
-      title: Réinitialiser le mot de passe
+      title: Réinitialiser votre mot de passe
     new:
-      requested: Veuillez vérifier votre e-mail pour un lien de réinitialisation de votre mot de passe.
-      submit: Réinitialiser le mot de passe
-      title: Réinitialiser le mot de passe
+      requested: Veuillez vérifier votre boite mail pour un lien de réinitialisation de votre mot de passe.
+      submit: Réinitialiser votre mot de passe
+      title: Réinitialiser votre mot de passe
     update:
       invalid_token: Jeton invalide.
       success: Votre mot de passe a été réinitialisé.
