--- a/config/locales/views/transfers/fr.yml
+++ b/config/locales/views/transfers/fr.yml
@@ -9,11 +9,11 @@ fr:
       amount: Montant
       date: Date
       expense: Dépense
-      from: D'origine
+      from: De
       income: Revenu
       select_account: Sélectionner un compte
       submit: Créer le transfert
-      to: À destination
+      to: Vers
       transfer: Transfert
     new:
       title: Nouveau transfert
